# gfs

./: .rustfmt.toml  BUG_REPORT.md  CHANGELOG.md  Cargo.toml  README.md  gfs-heavy-db-test.sh  gfs-medium-db-test.sh  gfs-sqlite-test.sh  gfs-sqlite-verify.sh
.github/workflows/: build-release.yml  release.yml  scorecard.yml
agents/: qwery-agent.md
crates/adapters/compute-docker/: Cargo.toml
crates/adapters/compute-docker/src/: error.rs  lib.rs
crates/adapters/compute-docker/src/containers/: clickhouse.rs  mod.rs  mysql.rs  postgresql.rs  sqlite.rs
crates/adapters/storage-apfs/src/: lib.rs
crates/adapters/storage-btrfs/: Cargo.toml
crates/adapters/storage-btrfs/src/: lib.rs
crates/adapters/storage-file/: Cargo.toml
crates/adapters/storage-file/src/: error.rs  lib.rs
crates/applications/cli/: Cargo.toml
crates/applications/cli/src/: lib.rs  main.rs  output.rs
crates/applications/cli/src/commands/: cmd_branch.rs  cmd_checkout.rs  cmd_commit.rs  cmd_compute.rs  cmd_config.rs  cmd_export.rs  cmd_import.rs  cmd_init.rs  cmd_log.rs  cmd_mcp.rs  cmd_providers.rs  cmd_query.rs  cmd_schema.rs  cmd_status.rs  cmd_version.rs  mod.rs
crates/applications/cli/tests/: e2e_checkout.rs  e2e_checkout_clickhouse.rs  e2e_checkout_postgres.rs  e2e_commit.rs  e2e_import_clickhouse_csv_gz.rs  e2e_import_clickhouse_sql.rs  e2e_init_clickhouse.rs  e2e_schema_diff.rs  e2e_short_hash.rs  json_output.rs  perf_snapshot_fallback.rs
crates/applications/cli/tests/common/: cli_runner.rs  clickhouse.rs  container_runtime.rs  mod.rs  postgres.rs
crates/applications/cli/tests/schema/: extract_clickhouse.rs
crates/applications/mcp/: Cargo.toml
crates/applications/mcp/src/: tools.rs
crates/applications/website/: install
crates/applications/website/src/components/: faq.rs  footer.rs
crates/applications/website/src/pages/docs/: coming_soon.rs  getting_started.rs  installation.rs  mod.rs  quick_start.rs  telemetry.rs
crates/applications/website/src/pages/docs/ai_agents/: mod.rs  skills.rs  subagents.rs
crates/applications/website/src/pages/docs/commands/: checkout.rs  commit.rs  compute.rs  config.rs  export.rs  import.rs  init.rs  log.rs  mod.rs  providers.rs  query.rs  schema.rs  status.rs
crates/applications/website/src/pages/docs/mcp/: claude_code.rs  claude_desktop.rs  cursor.rs  http_mode.rs  mod.rs  overview.rs
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/adapters/: gfs_repository.rs
crates/domain/src/model/: commit.rs  config.rs  errors.rs
crates/domain/src/ports/: compute.rs  database_provider.rs  repository.rs  storage.rs
crates/domain/src/repo_utils/: repo_layout.rs
crates/domain/src/repo_utils/helpers/: head_helper.rs
crates/domain/src/usecases/repository/: checkout_repo_usecase.rs  commit_repo_usecase.rs  export_repo_usecase.rs  extract_schema_usecase.rs  import_repo_usecase.rs  init_repo_usecase.rs  status_repo_usecase.rs
crates/domain/src/utils/: current_user.rs  data_dir.rs  mod.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/rfcs/002-cli/: 002-cli-commit.md  002-cli-config.md
integration_tests/tests/: e2e_checkout_postgres.rs
skills/use-gfs-cli/: SKILL.md
skills/use-gfs-mcp/: SKILL.md
