[workspace]
resolver = "2"
members = [
    "crates/adapters/compute-docker",
    "crates/adapters/storage-apfs",
    "crates/adapters/storage-btrfs",
    "crates/adapters/storage-file",
    "crates/applications/cli",
    "crates/applications/mcp",
    "crates/applications/website",
    "crates/config",
    "crates/domain",
    "crates/telemetry",
]

[workspace.package]
version      = "0.2.1"
edition      = "2024"
authors      = ["Guepard Corp <team@guepard.run>"]
license      = "MIT"
repository   = "https://github.com/Guepard-Corp/gfs"
rust-version = "1.93"

[workspace.dependencies]
rocket       = { version = "0.5", features = ["json"] }
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tonic        = { version = "0.12" }
tonic-build          = { version = "0.12" }
protoc-bin-vendored  = { version = "3" }
prost        = { version = "0.13" }
sysinfo      = { version = "0.32" }
clap         = { version = "4", features = ["derive", "env"] }
anyhow               = { version = "1" }
async-trait           = { version = "0.1" }
thiserror            = { version = "2" }
chrono               = { version = "0.4", features = ["serde"] }
bincode              = { version = "2" }
reqwest              = { version = "0.12", features = ["json"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = { version = "1" }
tempfile             = { version = "3" }
toml                 = { version = "0.8" }
tracing              = { version = "0.1" }
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }
utoipa               = { version = "5.4.0", features = ["rocket_extras"] }
utoipa-swagger-ui    = { version = "8", features = ["rocket"] }
kube                 = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi          = { version = "0.27.0", features = ["latest"] }
bollard              = { version = "0.20" }
sha2                 = { version = "0.10" }
tar                  = { version = "0.4" }
rmcp = { version = "0.16.0", features = [
    "server",
    "transport-streamable-http-server",
    "transport-io",
] }
posthog-rs             = { version = "0.4", default-features = false }
uuid                   = { version = "1", features = ["v4"] }
gfs-domain                 = { path = "crates/domain" }
gfs-telemetry              = { path = "crates/telemetry" }
gfs-config                 = { path = "crates/config" }
gfs-storage-apfs           = { path = "crates/adapters/storage-apfs" }
gfs-storage-btrfs          = { path = "crates/adapters/storage-btrfs" }
gfs-storage-file           = { path = "crates/adapters/storage-file" }
gfs-compute-docker         = { path = "crates/adapters/compute-docker" }
gfs-mcp                    = { path = "crates/applications/mcp" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
