[package]
name              = "gfs-domain"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
bincode     = { workspace = true, features = ["serde"] }
anyhow      = { workspace = true }
tracing     = { workspace = true }
sha2        = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
