[package]
name             = "gfs-telemetry"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
posthog-rs         = { workspace = true }
uuid               = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
gfs-domain         = { workspace = true }
