[package]
name               = "gfs-cli"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
name = "gfs_cli"
path = "src/lib.rs"

[[bin]]
name = "gfs"
path = "src/main.rs"

[[test]]
name = "import_postgres_csv"
path = "tests/import/postgres/import_csv.rs"

[[test]]
name = "import_postgres_sql"
path = "tests/import/postgres/import_sql.rs"

[[test]]
name = "schema_extract_postgres"
path = "tests/schema/extract_postgres.rs"

[[test]]
name = "schema_extract_clickhouse"
path = "tests/schema/extract_clickhouse.rs"

[dependencies]
gfs-domain     = { workspace = true }
gfs-telemetry  = { workspace = true }
gfs-compute-docker        = { workspace = true }
gfs-storage-file   = { workspace = true }
gfs-mcp            = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
async-trait        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json         = { workspace = true }
rmcp               = { workspace = true }
axum               = { version = "0.7", features = ["json", "macros"] }
tokio-util         = "0.7"
owo-colors         = { version = "4", features = ["supports-colors"] }
[dev-dependencies]
gfs-domain         = { workspace = true }
tempfile           = { workspace = true }
once_cell          = "1.21"
serial_test        = "3"
gag                = "1.0"
tokio              = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
gfs-storage-apfs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gfs-storage-btrfs = { workspace = true }
